# minipy

./: .flake8  .gitignore  README.md  pyproject.toml  setup.py
src/minipy/: __init__.py  core.py
src/minipy/backend/: __init__.py  array_ops.cpp  array_ops.cu  array_ops.hpp  array_ops.pyi  bindings.cpp  cpu_ops.cpp  cuda_ops.cu
src/minipy/utils/: device.py
tests/: benchmarks.py  test_core.py
