[build-system]
requires = ["setuptools>=45", "wheel", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minipy"
version = "0.1.0"
description = "A minimal numpy-like library with CUDA support"
requires-python = ">=3.12"

[tool.black]
line-length = 90

[tool.isort]
profile = "black"
line_length = 90
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
